@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: save.c,v 1.108 2005/06/05 04:55:15 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: save.c,v 1.109 2005/06/19 22:03:50 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - save.c */
@@ -560,6 +560,8 @@ set isosamples %d, %d\n\
 	fprintf(fp, "set datafile separator whitespace\n");
     if (strcmp(df_commentschars, DEFAULT_COMMENTS_CHARS))
 	fprintf(fp, "set datafile commentschars '%s'\n", df_commentschars);
+    if (df_fortran_constants)
+	fprintf(fp, "set datafile fortran\n");
 
     save_hidden3doptions(fp);
     fprintf(fp, "set cntrparam order %d\n", contour_order);
